--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 				<button class="btn-remove">Remove Last Task</button>
 			</div>
 		</div>
-
+		<footer
+			style="text-align: center; padding: 10px 0; background-color: #f8f9fa;">
+			<p>&copy; 2024 Jeph Daligdig. All rights reserved.</p>
+		</footer>
 		<script src="app.js"></script>
 	</body>
 </html>
